--- a/sample-app/pom.xml
+++ b/sample-app/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.2</version>
+        </dependency>
 
     </dependencies>
 
