--- a/sample-app/src/main/webapp/WEB-INF/web.xml
+++ b/sample-app/src/main/webapp/WEB-INF/web.xml
@@ -8,11 +8,19 @@
 
     <context-param>
         <param-name>MONGODB_HOST</param-name>
-        <param-value>localhost</param-value>
+        <param-value>193.106.55.42</param-value>
     </context-param>
     <context-param>
         <param-name>MONGODB_PORT</param-name>
         <param-value>27017</param-value>
+    </context-param>
+    <context-param>
+        <param-name>MONGODB_USERNAME</param-name>
+        <param-value>ADTAdmin</param-value>
+    </context-param>
+    <context-param>
+        <param-name>MONGODB_PASSWORD</param-name>
+        <param-value>P@ssw0rd</param-value>
     </context-param>
 
     <!-- Servlets -->
@@ -125,6 +133,16 @@
     <servlet-mapping>
         <servlet-name>createUser</servlet-name>
         <url-pattern>/createUser</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>saveUser</servlet-name>
+        <servlet-class>com.controller.users.SaveUserServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>saveUser</servlet-name>
+        <url-pattern>/saveUser</url-pattern>
     </servlet-mapping>
 
 
