finish change server framework
finish login(still not working properly)
finish add api for strategy users action and auth

--- a/sample-app/pom.xml
+++ b/sample-app/pom.xml
@@ -25,11 +25,6 @@
             <artifactId>bson</artifactId>
             <version>3.0.4</version>
         </dependency>
-        <dependency>
-            <groupId>com.pusher</groupId>
-            <artifactId>pusher-http-java</artifactId>
-            <version>0.9.3</version>
-        </dependency>
         <!-- JSTL libraries for JSP pages -->
         <dependency>
             <groupId>jstl</groupId>
@@ -65,11 +60,48 @@
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
         <version>3.12</version>
-    </dependency>
+        </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.12</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.2</version>
+        </dependency>
+
+        <!-- try satelizer-->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.3m</version>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>3.0.4.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
         </dependency>
     </dependencies>
 
