--- a/sample-app/src/main/webapp/WEB-INF/web.xml
+++ b/sample-app/src/main/webapp/WEB-INF/web.xml
@@ -16,144 +16,12 @@
     </context-param>
     <context-param>
         <param-name>MONGODB_USERNAME</param-name>
-        <param-value>ADTAdmin</param-value>
+        <param-value>adtm</param-value>
     </context-param>
     <context-param>
         <param-name>MONGODB_PASSWORD</param-name>
-        <param-value>P@ssw0rd</param-value>
+        <param-value>1234Abcd</param-value>
     </context-param>
-
-    <!-- Servlets -->
-    <!-- Stocks -->
-    <servlet>
-        <servlet-name>getStocks</servlet-name>
-        <servlet-class>com.controller.stocks.GetStocksServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>getStocks</servlet-name>
-        <url-pattern>/getStocks</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>getStocksRange</servlet-name>
-        <servlet-class>com.controller.stocks.GetStocksRangeServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>getStocksRange</servlet-name>
-        <url-pattern>/getStocksRange</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>javaEditStock</servlet-name>
-        <servlet-class>com.controller.stocks.EditStockServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>javaEditStock</servlet-name>
-        <url-pattern>/javaEditStock</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>javaDeleteStock</servlet-name>
-        <servlet-class>com.controller.stocks.DeleteStockServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>javaDeleteStock</servlet-name>
-        <url-pattern>/javaDeleteStock</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>javaAddStock</servlet-name>
-        <servlet-class>com.controller.stocks.AddStockServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>javaAddStock</servlet-name>
-        <url-pattern>/javaAddStock</url-pattern>
-    </servlet-mapping>
-
-    <!-- Actions -->
-    <servlet>
-        <servlet-name>addAction</servlet-name>
-        <servlet-class>com.controller.actions.AddActionServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>addAction</servlet-name>
-        <url-pattern>/addAction</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>deleteAction</servlet-name>
-        <servlet-class>com.controller.actions.DeleteActionServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>deleteAction</servlet-name>
-        <url-pattern>/deleteAction</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>editAction</servlet-name>
-        <servlet-class>com.controller.actions.EditActionServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>editAction</servlet-name>
-        <url-pattern>/editAction</url-pattern>
-    </servlet-mapping>
-
-    <!-- Strategy -->
-    <servlet>
-        <servlet-name>addStrategy</servlet-name>
-        <servlet-class>com.controller.strategy.AddStrategyServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>addStrategy</servlet-name>
-        <url-pattern>/addStrategy</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>deleteStrategy</servlet-name>
-        <servlet-class>com.controller.strategy.DeleteStrategyServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>deleteStrategy</servlet-name>
-        <url-pattern>/deleteStrategy</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>editStrategy</servlet-name>
-        <servlet-class>com.controller.strategy.EditStrategyServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>editStrategy</servlet-name>
-        <url-pattern>/editStrategy</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>createUser</servlet-name>
-        <servlet-class>com.controller.users.CreateUserServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>createUser</servlet-name>
-        <url-pattern>/createUser</url-pattern>
-    </servlet-mapping>
-
-
-    <servlet>
-        <servlet-name>saveUser</servlet-name>
-        <servlet-class>com.controller.users.SaveUserServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>saveUser</servlet-name>
-        <url-pattern>/saveUser</url-pattern>
-    </servlet-mapping>
-
-
-    <servlet>
-        <servlet-name>getLiveData</servlet-name>
-        <servlet-class>com.controller.ExcelReaderServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>getLiveData</servlet-name>
-        <url-pattern>/getLiveData</url-pattern>
-    </servlet-mapping>
 
     <context-param>
         <param-name>PUSHER_APP_ID</param-name>
@@ -175,6 +43,40 @@
         <param-name>DB_PORT</param-name>
         <param-value>27017</param-value>
     </context-param>
+
+    <!-- this need same with resteasy servlet url-pattern -->
+    <context-param>
+        <param-name>resteasy.servlet.mapping.prefix</param-name>
+        <param-value>/rest</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>
+            org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
+        </listener-class>
+    </listener>
+
+    <servlet>
+        <servlet-name>resteasy-servlet</servlet-name>
+        <servlet-class>
+            org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
+        </servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>resteasy-servlet</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>getLiveData</servlet-name>
+        <servlet-class>com.controller.ExcelReaderServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getLiveData</servlet-name>
+        <url-pattern>/getLiveData</url-pattern>
+    </servlet-mapping>
+
     <listener>
         <listener-class>
             com.DB.MongoDBContextListener
